test/e2e/testdata/httproute-parents-cleanup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-1
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-2
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: http
    port: 81
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-parents-cleanup
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-1
  - name: gateway-2
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /test
    backendRefs:
    - name: infra-backend-v1
      port: 8080
